--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -188,7 +188,7 @@ import '../styles/global.css';
 
       <!-- Soft Skills dentro de la sección de Technical Skills -->
       <section id="soft-skills" class="max-w-6xl mx-auto mt-10 mb-12 px-6">
-        <h3 class="text-xl md:text-2xl font-semibold text-green-400 mb-6 tracking-tight text-center">Soft Skills</h3>
+        <h3 class="text-xl md:text-2xl font-semibold text-green-400 mb-6 tracking-tight text-center">Soft</h3>
         <ul class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 md:gap-6">
           <li class="soft-skill-item">Effective Communication</li>
           <li class="soft-skill-item">Teamwork and Collaboration</li>
